垃圾收集器和内存分配